--- a/exercicio-angular/src/app/views/account/sign-in/sign-in.component.html
+++ b/exercicio-angular/src/app/views/account/sign-in/sign-in.component.html
@@ -1,1 +1,22 @@
-<p>sign-in works!</p>
+<div class="base-form">
+    <form class="form mat-elevation-z4">
+      <h2>Portal Fai Estudos</h2>
+      <div class="row">
+        <mat-form-field>
+          <mat-label>Email</mat-label>
+          <input  matInput placeholder="Email"  required="">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Senha</mat-label>
+          <input matInput type="password" placeholder="Senha"  maxlength="10" required>
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="col-6">Login</button>
+      </div>
+      
+      <hr>
+      <div class="mt-4">
+        <p>Não possui uma conta? <a href="account/sign-up">Clique aqui</a> para criar agora mesmo!</p>
+      </div>
+    </form>
+  </div>
+  
