--- a/exercicio-angular/src/app/views/app/main/main.component.html
+++ b/exercicio-angular/src/app/views/app/main/main.component.html
@@ -1,1 +1,56 @@
-<p>main works!</p>
+<div class="main-root">
+    <mat-toolbar color="primary">
+      <button mat-icon-button matTooltip="menu">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>LDS App</span>
+      <span class="toolbar-item-spacer"></span>
+      <button mat-icon-button matTooltip="Meu perfil">
+        <mat-icon>account_circle</mat-icon>
+      </button>
+      <mat-menu yPosition="below">
+        <button mat-menu-icon href="">
+          <mat-icon>person</mat-icon><span>Minha conta</span>
+        </button>
+        <button mat-menu-utem href="">
+          <mat-icon>settings</mat-icon><span>Ajuda</span>
+        </button>
+  
+        <mat-divider></mat-divider>
+  
+        <button mat-menu-item>
+          <mat-icon>exit_to_app</mat-icon>Sair
+        </button>
+      </mat-menu>
+    </mat-toolbar>
+  
+    <mat-sidenav-container class="app-container">
+      <mat-sidenav mode="side" class="app-sidenav">
+        <mat-nav-list>
+          <mat-list-item routerLink="/">
+            <mat-icon>dashboard</mat-icon><span>Home</span>
+          </mat-list-item>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              Produtos
+            </mat-expansion-panel-header>
+            <mat-nav-list>
+              <a mat-list-item routerLink="">Listar</a>
+              <a mat-list-item routerLink="">Criar</a>
+            </mat-nav-list>
+          </mat-expansion-panel>
+        </mat-nav-list>
+      </mat-sidenav>
+      <div class="page-wrap">
+        <main class="container mt-2">
+          <router-outlet></router-outlet>
+          <div class="mb-4"></div>
+        </main>
+      </div>
+    </mat-sidenav-container>
+    <footer>
+      Todos os direitos reservados.
+      Feito com <span></span> pela FAI ;D
+    </footer>
+  </div>
+  
