feat: ajustando as paginas e adicao da pasta assets

--- a/exercicio-angular/src/app/views/app/home/home.component.html
+++ b/exercicio-angular/src/app/views/app/home/home.component.html
@@ -1,43 +1,47 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Home</li>
+
     </ol>
   </nav>
-  <h1>Home</h1>
+  <h1>Pagina Inicial - Exercicio criando um projeto do Angular</h1>
   <hr>
   
   <article>
-    <h2>Aula do dia 03</h2>
+    <h2>Crie um projeto do zero utilizando Angular</h2>
     <ul>
-      <li>GIT
+      <li>O qual deve possuir um total de 5 componentes, sendo:
         <ul>
-          <li>git checkout</li>
-          <li>git merge</li>
-          <li>Resolução de conflitos</li>
+          <li>Sign-In</li>
+          <li>Sign-Up</li>
+          <li>Main</li>
+          <li>Home</li>
+          <li>Help</li>
         </ul>
       </li>
     </ul>
   </article>
   <hr>
   <article>
-    <h2>Aula do dia 02</h2>
+    <h2>Cada um destes componentes deve ser navegável</h2>
     <ul>
-      <li>GIT
+      <li>Portanto construa as seguintes rotas: 
         <ul>
-          <li>git add</li>
-          <li>git commit</li>
-          <li>git status</li>
+          <li>Sign-in > navega para Sign-up e Home</li>
+          <li>Sign-up -> navega para Sign-in/li>
+          <li>Home -> navega para Help</li>
+          <li>Help -> navega para Home</li>
+          <li>Main -> componente principal, o qual Home e Help devem ser renderizados</li>
         </ul>
       </li>
     </ul>
   </article>
   <hr>
   <article>
-    <h2>Aula do dia 01</h2>
+    <h2>Atividade extra</h2>
     <ul>
-      <li>Introdução da disciplina</li>
-      <li>Introdução ao GIT</li>
+      <li>Desenvolva o fluxo de logout, o qual deve sair de Home ou Help e ir direto para a tela de Sign-in.</li>
+     
     </ul>
   </article>
   
