--- a/exercicio-angular/src/app/views/app/main/main.component.html
+++ b/exercicio-angular/src/app/views/app/main/main.component.html
@@ -3,7 +3,7 @@
       <button mat-icon-button matTooltip="menu">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>LDS App</span>
+      <span>Exercicio Angular</span>
       <span class="toolbar-item-spacer"></span>
       <button mat-icon-button matTooltip="Meu perfil">
         <mat-icon>account_circle</mat-icon>
@@ -50,7 +50,7 @@
     </mat-sidenav-container>
     <footer>
       Todos os direitos reservados.
-      Feito com <span></span> pela FAI ;D
+      Feito com <span></span> o ajuda do professor Luciano 💻! 
     </footer>
   </div>
   
