feat: ajuste nas paginas home e help

--- a/exercicio-angular/src/app/views/account/sign-in/sign-in.component.html
+++ b/exercicio-angular/src/app/views/account/sign-in/sign-in.component.html
@@ -1,4 +1,11 @@
 <div class="base-form">
+
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="home">Home</a></li>
+  </ol>
+
+
+
     <form class="form mat-elevation-z4">
       <h2>Portal Fai Estudos</h2>
       <div class="row">
