--- a/exercicio-angular/src/app/views/app/help/help.component.html
+++ b/exercicio-angular/src/app/views/app/help/help.component.html
@@ -1,7 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="">Home</a>
+        <a href="home">Home</a>
       </li>
       <li class="breadcrumb-item active" aria-current="page">Ajuda</li>
     </ol>
@@ -10,31 +10,19 @@
   <hr>
   <article>
     <header>
-      <h2>Como utilizar o sistema</h2>
+      <h2>Criando aplicações Angular com Angular CLI</h2>
+      <h3>Instalando o CLI Angular</h3>
     </header>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
-      Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna
-      aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
-      Duis
-      aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-      occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>Para instalar o Angular CLI usamos um ambiente de tempo de execução JavaScript (JavaScript runtime environment) chamado Node.JS junto com o seu gerenciador de pacotes Npm (Node Package Manager).</p>
+    <p><strong>install -g angular-cli</strong> </p>
+    <p>Utilizamos o comando <i>npm</i> para invocar o Node Package Manager (gerenciador de pacotes do Node.JS) e através do parâmetro <i>-g</i> definimos que o pacote <i>angular-cli</i> deve ser disponibilizado globalmente em nosso computador.</p>
+    <p>Para verificarmos se a instalação ocorreu corretamente, podemos executar o comando:</p>
+    <p><strong>ng -v</strong> </p>
+    <p>A saída do comando acima deve ser a versão do angular-cli instalada.</p>
+    <img src="\assets\img\jpeg\angular-ng-v.jpeg" alt="imagem versao do angular" />
     <footer class="text-end">
       <p>
-        <small>LDS FAI</small>
+        <small>Exercicio Angular - LDS FAI</small>
       </p>
     </footer>
   </article>
