--- a/exercicio-angular/src/app/views/app/home/home.component.html
+++ b/exercicio-angular/src/app/views/app/home/home.component.html
@@ -1,7 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="">Home</a></li>
-
+      <li class="breadcrumb-item"><a href="help">Ajuda</a></li>
     </ol>
   </nav>
   <h1>Pagina Inicial - Exercicio criando um projeto do Angular</h1>
@@ -28,7 +28,7 @@
       <li>Portanto construa as seguintes rotas: 
         <ul>
           <li>Sign-in > navega para Sign-up e Home</li>
-          <li>Sign-up -> navega para Sign-in/li>
+          <li>Sign-up -> navega para Sign-in</li>
           <li>Home -> navega para Help</li>
           <li>Help -> navega para Home</li>
           <li>Main -> componente principal, o qual Home e Help devem ser renderizados</li>
