feat: organizacao das paginas

--- a/exercicio-angular/src/app/views/app/help/help.component.html
+++ b/exercicio-angular/src/app/views/app/help/help.component.html
@@ -1,29 +1,34 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a href="home">Home</a>
-      </li>
-      <li class="breadcrumb-item active" aria-current="page">Ajuda</li>
-    </ol>
-  </nav>
-  <h1>Ajuda</h1>
-  <hr>
-  <article>
-    <header>
-      <h2>Criando aplicações Angular com Angular CLI</h2>
-      <h3>Instalando o CLI Angular</h3>
-    </header>
-    <p>Para instalar o Angular CLI usamos um ambiente de tempo de execução JavaScript (JavaScript runtime environment) chamado Node.JS junto com o seu gerenciador de pacotes Npm (Node Package Manager).</p>
-    <p><strong>install -g angular-cli</strong> </p>
-    <p>Utilizamos o comando <i>npm</i> para invocar o Node Package Manager (gerenciador de pacotes do Node.JS) e através do parâmetro <i>-g</i> definimos que o pacote <i>angular-cli</i> deve ser disponibilizado globalmente em nosso computador.</p>
-    <p>Para verificarmos se a instalação ocorreu corretamente, podemos executar o comando:</p>
-    <p><strong>ng -v</strong> </p>
-    <p>A saída do comando acima deve ser a versão do angular-cli instalada.</p>
-    <img src="\assets\img\jpeg\angular-ng-v.jpeg" alt="imagem versao do angular" />
-    <footer class="text-end">
-      <p>
-        <small>Exercicio Angular - LDS FAI</small>
-      </p>
-    </footer>
-  </article>
-  
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <a href="home">Home</a>
+    </li>
+    <li class="breadcrumb-item active" aria-current="page">Ajuda</li>
+  </ol>
+</nav>
+<h1>Ajuda</h1>
+<hr>
+<article>
+  <header>
+    <h2>Criando aplicações Angular com Angular CLI</h2>
+    <h3>Instalando o CLI Angular</h3>
+  </header>
+  <p>Para instalar o Angular CLI usamos um ambiente de tempo de execução JavaScript (JavaScript runtime environment)
+    chamado Node.JS junto com o seu gerenciador de pacotes Npm (Node Package Manager).</p>
+  <p><strong>install -g angular-cli</strong> </p>
+  <p>Utilizamos o comando <i>npm</i> para invocar o Node Package Manager (gerenciador de pacotes do Node.JS) e através
+    do parâmetro <i>-g</i> definimos que o pacote <i>angular-cli</i> deve ser disponibilizado globalmente em nosso
+    computador.</p>
+  <p>Para verificarmos se a instalação ocorreu corretamente, podemos executar o comando:</p>
+  <p><strong>ng -v</strong> </p>
+  <p>A saída do comando acima deve ser a versão do angular-cli instalada.</p>
+  <img src="assets\img\angular-ng-v.jpeg" alt="imagem versao do angular"/>
+
+  <li class="breadcrumb"><a href="account/sign-in">LogOut</a></li>
+  <footer class="text-end">
+    <p>
+      <small>Exercicio Angular - LDS FAI</small>
+    </p>
+  </footer>
+</article>
+
