--- a/exercicio-angular/src/app/views/app/home/home.component.html
+++ b/exercicio-angular/src/app/views/app/home/home.component.html
@@ -1,47 +1,50 @@
 <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="">Home</a></li>
-      <li class="breadcrumb-item"><a href="help">Ajuda</a></li>
-    </ol>
-  </nav>
-  <h1>Pagina Inicial - Exercicio criando um projeto do Angular</h1>
-  <hr>
-  
-  <article>
-    <h2>Crie um projeto do zero utilizando Angular</h2>
-    <ul>
-      <li>O qual deve possuir um total de 5 componentes, sendo:
-        <ul>
-          <li>Sign-In</li>
-          <li>Sign-Up</li>
-          <li>Main</li>
-          <li>Home</li>
-          <li>Help</li>
-        </ul>
-      </li>
-    </ul>
-  </article>
-  <hr>
-  <article>
-    <h2>Cada um destes componentes deve ser navegável</h2>
-    <ul>
-      <li>Portanto construa as seguintes rotas: 
-        <ul>
-          <li>Sign-in > navega para Sign-up e Home</li>
-          <li>Sign-up -> navega para Sign-in</li>
-          <li>Home -> navega para Help</li>
-          <li>Help -> navega para Home</li>
-          <li>Main -> componente principal, o qual Home e Help devem ser renderizados</li>
-        </ul>
-      </li>
-    </ul>
-  </article>
-  <hr>
-  <article>
-    <h2>Atividade extra</h2>
-    <ul>
-      <li>Desenvolva o fluxo de logout, o qual deve sair de Home ou Help e ir direto para a tela de Sign-in.</li>
-     
-    </ul>
-  </article>
-  
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="home">Home</a></li>
+    <li class="breadcrumb-item"><a href="help">Ajuda</a></li>
+  </ol>
+</nav>
+<h1>Pagina Inicial - Exercicio criando um projeto do Angular</h1>
+<hr>
+
+<article>
+  <h2>Crie um projeto do zero utilizando Angular</h2>
+  <ul>
+    <li>O qual deve possuir um total de 5 componentes, sendo:
+      <ul>
+        <li>Sign-In</li>
+        <li>Sign-Up</li>
+        <li>Main</li>
+        <li>Home</li>
+        <li>Help</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+<hr>
+<article>
+  <h2>Cada um destes componentes deve ser navegável</h2>
+  <ul>
+    <li>Portanto construa as seguintes rotas:
+      <ul>
+        <li>Sign-in > navega para Sign-up e Home</li>
+        <li>Sign-up -> navega para Sign-in</li>
+        <li>Home -> navega para Help</li>
+        <li>Help -> navega para Home</li>
+        <li>Main -> componente principal, o qual Home e Help devem ser renderizados</li>
+      </ul>
+    </li>
+  </ul>
+</article>
+<hr>
+<article>
+  <h2>Atividade extra</h2>
+  <ul>
+    <li>Desenvolva o fluxo de logout, o qual deve sair de Home ou Help e ir direto para a tela de Sign-in.</li>
+
+  </ul>
+
+
+  <li class="breadcrumb"><a href="account/sign-in">LogOut</a></li>
+</article>
+
