feat: ajuste nas paginas main, home e help

--- a/exercicio-angular/src/app/views/app/main/main.component.html
+++ b/exercicio-angular/src/app/views/app/main/main.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button matTooltip="menu">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Exericico Angular </span>
+    <span>Exercicio Angular</span>
     <span class="toolbar-item-spacer"></span>
     <button mat-icon-button matTooltip="Meu perfil">
       <mat-icon>account_circle</mat-icon>
@@ -49,7 +49,6 @@
     </div>
   </mat-sidenav-container>
   <footer>
-    Todos os direitos reservados.
-    Feito com <span></span> pela FAI ;D
+    <span>Atividade angular</span>
   </footer>
 </div>
