--- a/exercicio-angular/src/app/views/app/help/help.component.html
+++ b/exercicio-angular/src/app/views/app/help/help.component.html
@@ -1,7 +1,7 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item">
-      <a href="home">Home</a>
+      <a href="">Home</a>
     </li>
     <li class="breadcrumb-item active" aria-current="page">Ajuda</li>
   </ol>
