--- a/exercicio-angular/src/app/views/account/sign-up/sign-up.component.css
+++ b/exercicio-angular/src/app/views/account/sign-up/sign-up.component.css
@@ -1,6 +1,6 @@
 .base-form {
     height: 100%;
-    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, #4050b5, rgb(202, 246, 255) 100%);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 1) 0%, #3fb5b4, rgb(202, 246, 255) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +10,7 @@
   .form {
     width: 30rem;
     margin: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(179, 238, 233);
     padding: 4rem 1rem;
     border-radius: 1rem;
   }
